--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "namastefood",
   "version": "1.0.0",
   "description": "Food delivery app",
-  "main": "App.js",
+  
   "scripts": {
     "test": "jest"
   },
@@ -16,6 +16,16 @@
   "author": "Jayashree",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
-  }
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  
+  "browerslist" : [
+
+    "last 2 versions"
+  ]
 }
