--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Food delivery app",
   
   "scripts": {
+    "start" : "parcel index.html",
+    "build" : "parcel build index.html",
     "test": "jest"
   },
   "repository": {
