--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "namastefood",
   "version": "1.0.0",
   "description": "Food delivery app",
-  
   "scripts": {
-    "start" : "parcel index.html",
-    "build" : "parcel build index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -23,11 +22,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
-  
-  "browerslist" : [
-
+  "browerslist": [
     "last 2 versions"
   ]
 }
